# django-scrap

./: pyproject.toml
quotes_project/: db.sqlite3  manage.py
quotes_project/quotes/: models.py  urls.py  utils.py  views.py
quotes_project/quotes/migrations/: 0001_initial.py  0002_alter_quote_author.py
quotes_project/quotes/static/quotes/: style.css
quotes_project/quotes/templates/quotes/: Austen.html  Edison.html  Einstein.html  Gide.html  Martin.html  Monroe.html  Roosevelt.html  Rowling.html  base.html  index.html
quotes_project/quotes_project/: asgi.py  settings.py  urls.py  wsgi.py
quotes_project/users/: decorators.py  forms.py  urls.py  views.py
quotes_project/users/templates/: add.html  login.html  register.html
quotes_project/utils/: authors.json  migrations.py  quotes.json
