[tool.poetry]
name = "poetry shell"
version = "0.1.0"
description = ""
authors = ["Andrii Pronko <andreypronko2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
psycopg2 = "^2.9.9"
pymongo = "^4.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
